spotless formatting instead of checkstyle